--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "inputmask": "^5.0.3",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
